--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,64 @@
+a{
+    color: #11999E;
+}
 body{
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 h1{
-   margin: 50px auto 0 auto;
-   font-family: 'Sacramento', cursive;
-   font-size: 90px;
+    color: #66BFBF;
+    line-height: 2;
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    font-size: 90px;
 }
 span{
     text-decoration: underline;
 }
 h2{
+    color: #66BFBF;
     font-size: 2.5em;
     font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
 }
 h3{
+    color: #11999E;
     font-family: 'Montserrat', sans-serif;
+}
+hr{
+    width: 5%;
+    border-style: none;
+    border-top: dotted #858585;
+    border-width: 5px;
+    margin: 40px auto 40px auto;
 }
 .profile-pic{
     border-radius: 100%;
     width: 200px;
 }
+.skills{
+    text-align: start;
+    line-height: 2;
+}
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+}
+.code-img{
+    width: 25%;
+    border-radius: 100%;
+    float: left;
+    margin-right: 30px;
+}
+.chill-img{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
 .top-container {
     background-color: #E4F9F5;
     padding-top: 100px;
-}
-.mid-container{
-
-}
-.bottom-container{
-
 }
 .top-cloud{
     position: absolute;
@@ -41,4 +69,52 @@ h3{
     position: absolute;
     left: 300px;
   ;
+}
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin-top: 75px;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+.contact-me{
+    margin-bottom: 75px;
+}
+.middle-container{
+    margin: 75px;
+}
+.bottom-container{
+    background-color: #66BFBF;
+    padding: 40px;
+}
+.footer-link{
+    padding: 0 20px 0 20px;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+}
+.end{
+    color: white;
+    font-weight: normal;
+    font-size: small;
 }
